syntax = "proto3";

package recordcollection;

message Version {
  string key = 1;
  int64 value = 2;
}

message GetVersionRequest {
  string key = 1;
}

message GetVersionResponse {
  Version version = 2;
}

service VersionServer {
  rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {};
}
